@@ -331,9 +331,6 @@ class CourseServiceTest {
             assertThat(dto.getDescription()).isEqualTo("Базовый курс по Java");
             assertThat(dto.getDuration()).isEqualTo(40);
             assertThat(dto.getCategoryId()).isEqualTo(10);
-            assertThat(dto.getInstanceTitle()).isEqualTo("Java Group 1");
-            assertThat(dto.getInstanceStartDate()).isEqualTo(instance1.getStartDate().toLocalDate());
-            assertThat(dto.getInstanceEndDate()).isEqualTo(instance1.getEndDate().toLocalDate());
 
             verify(courseInstanceRepository).findAllByIsActiveTrue();
         }
@@ -354,16 +351,32 @@ class CourseServiceTest {
         @Test
         @DisplayName("Should handle null user parameter")
         void shouldHandleNullUserParameter() {
-            testCourse.setCategory(testCategory);
-            testCourse.setIsActive(true);
-            testCourse.setIsIndividual(false);
-            testCourse.setCreatedAt(LocalDateTime.now().minusDays(5));
-            testCourse.setUpdatedAt(LocalDateTime.now().minusDays(1));
+            CourseCategory testCategory = CourseCategory.builder()
+                    .id(10)
+                    .name("Backend")
+                    .build();
 
-            testCourseInstance.setCourse(testCourse);
-            testCourseInstance.setTitle("Java Group");
-            testCourseInstance.setStartDate(LocalDateTime.now().plusDays(2));
-            testCourseInstance.setEndDate(LocalDateTime.now().plusDays(10));
+            Course testCourse = Course.builder()
+                    .id(1)
+                    .title("Java Основы")
+                    .code("JAVA-101")
+                    .description("Базовый курс по Java")
+                    .durationHours(40)
+                    .isActive(true)
+                    .isIndividual(false)
+                    .createdAt(LocalDateTime.now().minusDays(5))
+                    .updatedAt(LocalDateTime.now().minusDays(1))
+                    .category(testCategory)
+                    .build();
+
+            CourseInstance testCourseInstance = CourseInstance.builder()
+                    .id(100)
+                    .title("Java Group")
+                    .course(testCourse)
+                    .startDate(LocalDateTime.now().plusDays(2))
+                    .endDate(LocalDateTime.now().plusDays(10))
+                    .isActive(true)
+                    .build();
 
             when(courseInstanceRepository.findAllByIsActiveTrue())
                     .thenReturn(List.of(testCourseInstance));
@@ -371,15 +384,24 @@ class CourseServiceTest {
             List<CourseDto> result = courseService.getAvailableCoursesForOrganization(null);
 
             assertThat(result).hasSize(1);
-            assertThat(result.get(0).getId()).isEqualTo(1);
-            assertThat(result.get(0).getTitle()).isEqualTo("Java Основы");
-            assertThat(result.get(0).getInstanceTitle()).isEqualTo("Java Group");
+            CourseDto dto = result.get(0);
+            assertThat(dto.getId()).isEqualTo(1);
+            assertThat(dto.getTitle()).isEqualTo("Java Основы");
+            assertThat(dto.getCode()).isEqualTo("JAVA-101");
+            assertThat(dto.getDescription()).isEqualTo("Базовый курс по Java");
+            assertThat(dto.getDuration()).isEqualTo(40);
+            assertThat(dto.getCategoryId()).isEqualTo(10);
+
+            assertThat(dto.getInstanceTitle()).isNull();
+            assertThat(dto.getInstanceStartDate()).isNull();
+            assertThat(dto.getInstanceEndDate()).isNull();
 
             verify(courseInstanceRepository).findAllByIsActiveTrue();
         }
 
+
         @Test
-        @DisplayName("Should handle course instances with null courses")
+        @DisplayName("Should handle course instances with null courses gracefully")
         void shouldHandleCourseInstancesWithNullCourses() {
             CourseInstance instanceWithNullCourse = CourseInstance.builder()
                     .id(2)
@@ -388,169 +410,174 @@ class CourseServiceTest {
                     .build();
 
             when(courseInstanceRepository.findAllByIsActiveTrue())
-                    .thenReturn(Arrays.asList(instanceWithNullCourse));
+                    .thenReturn(List.of(instanceWithNullCourse));
 
-            assertThatThrownBy(() -> courseService.getAvailableCoursesForOrganization(testUser))
-                    .isInstanceOf(NullPointerException.class);
+            List<CourseDto> result = courseService.getAvailableCoursesForOrganization(testUser);
+
+            assertThat(result).isEmpty();
 
             verify(courseInstanceRepository).findAllByIsActiveTrue();
         }
-    }
 
-    @Nested
-    @DisplayName("Private Method Tests (toDto and toCategoryDto)")
-    class PrivateMethodTests {
+        @Nested
+        @DisplayName("Private Method Tests (toDto and toCategoryDto)")
+        class PrivateMethodTests {
 
-        @Test
-        @DisplayName("Should test toDto method through getAllCourses")
-        void shouldTestToDtoMethodThroughGetAllCourses() {
-            Course courseWithAllFields = Course.builder()
-                    .id(1)
-                    .title("Complete Course")
-                    .code("COMPLETE")
-                    .description("A complete course")
-                    .durationHours(50)
-                    .category(testCategory)
-                    .build();
+            @Test
+            @DisplayName("Should test toDto method through getAllCourses")
+            void shouldTestToDtoMethodThroughGetAllCourses() {
+                Course courseWithAllFields = Course.builder()
+                        .id(1)
+                        .title("Complete Course")
+                        .code("COMPLETE")
+                        .description("A complete course")
+                        .durationHours(50)
+                        .category(testCategory)
+                        .build();
 
-            when(courseRepository.findAll()).thenReturn(Arrays.asList(courseWithAllFields));
+                when(courseRepository.findAll()).thenReturn(Arrays.asList(courseWithAllFields));
 
-            List<CourseDto> result = courseService.getAllCourses();
+                List<CourseDto> result = courseService.getAllCourses();
 
-            assertThat(result).hasSize(1);
-            CourseDto dto = result.get(0);
-            assertThat(dto.getId()).isEqualTo(1);
-            assertThat(dto.getTitle()).isEqualTo("Complete Course");
-            assertThat(dto.getCode()).isEqualTo("COMPLETE");
-            assertThat(dto.getDescription()).isEqualTo("A complete course");
-            assertThat(dto.getDuration()).isEqualTo(50);
-            assertThat(dto.getCategory().getId()).isEqualTo(1);
-            assertThat(dto.getCategory().getName()).isEqualTo("Программирование");
+                assertThat(result).hasSize(1);
+                CourseDto dto = result.get(0);
+                assertThat(dto.getId()).isEqualTo(1);
+                assertThat(dto.getTitle()).isEqualTo("Complete Course");
+                assertThat(dto.getCode()).isEqualTo("COMPLETE");
+                assertThat(dto.getDescription()).isEqualTo("A complete course");
+                assertThat(dto.getDuration()).isEqualTo(50);
+                assertThat(dto.getCategory().getId()).isEqualTo(1);
+                assertThat(dto.getCategory().getName()).isEqualTo("Программирование");
+            }
+
+            @Test
+            @DisplayName("Should test toCategoryDto method through getAllCourses")
+            void shouldTestToCategoryDtoMethodThroughGetAllCourses() {
+                CourseCategory categoryWithDescription = CourseCategory.builder()
+                        .id(2)
+                        .name("Advanced Programming")
+                        .description("Advanced programming concepts")
+                        .build();
+
+                Course course = Course.builder()
+                        .id(1)
+                        .title("Test Course")
+                        .code("TEST")
+                        .description("Test")
+                        .durationHours(30)
+                        .category(categoryWithDescription)
+                        .build();
+
+                when(courseRepository.findAll()).thenReturn(Arrays.asList(course));
+
+                List<CourseDto> result = courseService.getAllCourses();
+
+                assertThat(result).hasSize(1);
+                CourseCategoryDto categoryDto = result.get(0).getCategory();
+                assertThat(categoryDto.getId()).isEqualTo(2);
+                assertThat(categoryDto.getName()).isEqualTo("Advanced Programming");
+            }
         }
 
-        @Test
-        @DisplayName("Should test toCategoryDto method through getAllCourses")
-        void shouldTestToCategoryDtoMethodThroughGetAllCourses() {
-            CourseCategory categoryWithDescription = CourseCategory.builder()
-                    .id(2)
-                    .name("Advanced Programming")
-                    .description("Advanced programming concepts")
-                    .build();
+        @Nested
+        @DisplayName("convertToDto Tests")
+        class ConvertToDtoTests {
 
-            Course course = Course.builder()
-                    .id(1)
-                    .title("Test Course")
-                    .code("TEST")
-                    .description("Test")
-                    .durationHours(30)
-                    .category(categoryWithDescription)
-                    .build();
+            @Test
+            @DisplayName("Should convert course entity to full DTO")
+            void shouldConvertCourseEntityToFullDto() {
+                when(categoryAdminService.convertToDto(testCategory)).thenReturn(testCategoryDto);
 
-            when(courseRepository.findAll()).thenReturn(Arrays.asList(course));
+                CourseDto result = courseService.convertToDto(testCourse);
 
-            List<CourseDto> result = courseService.getAllCourses();
+                assertThat(result).isNotNull();
+                assertThat(result.getId()).isEqualTo(testCourse.getId());
+                assertThat(result.getTitle()).isEqualTo(testCourse.getTitle());
+                assertThat(result.getCode()).isEqualTo(testCourse.getCode());
+                assertThat(result.getDescription()).isEqualTo(testCourse.getDescription());
+                assertThat(result.getDuration()).isEqualTo(testCourse.getDurationHours());
+                assertThat(result.getIndividual()).isEqualTo(testCourse.getIsIndividual());
+                assertThat(result.getActive()).isEqualTo(testCourse.getIsActive());
+                assertThat(result.getCreatedAt()).isEqualTo(testCourse.getCreatedAt());
+                assertThat(result.getUpdatedAt()).isEqualTo(testCourse.getUpdatedAt());
+                assertThat(result.getCategory()).isEqualTo(testCategoryDto);
+                assertThat(result.getCategoryId()).isEqualTo(testCategory.getId());
 
-            assertThat(result).hasSize(1);
-            CourseCategoryDto categoryDto = result.get(0).getCategory();
-            assertThat(categoryDto.getId()).isEqualTo(2);
-            assertThat(categoryDto.getName()).isEqualTo("Advanced Programming");
-        }
-    }
+                verify(categoryAdminService).convertToDto(testCategory);
+            }
 
-    @Nested
-    @DisplayName("convertToDto Tests")
-    class ConvertToDtoTests {
+            @Test
+            @DisplayName("Should handle course with null boolean fields")
+            void shouldHandleCourseWithNullBooleanFields() {
+                Course courseWithNullBooleans = Course.builder()
+                        .id(1)
+                        .title("Test Course")
+                        .code("TEST")
+                        .description("Test")
+                        .durationHours(30)
+                        .isIndividual(null)
+                        .isActive(null)
+                        .category(testCategory)
+                        .createdAt(LocalDateTime.now())
+                        .updatedAt(LocalDateTime.now())
+                        .build();
 
-        @Test
-        @DisplayName("Should convert course entity to full DTO")
-        void shouldConvertCourseEntityToFullDto() {
-            when(categoryAdminService.convertToDto(testCategory)).thenReturn(testCategoryDto);
+                when(categoryAdminService.convertToDto(testCategory)).thenReturn(testCategoryDto);
 
-            CourseDto result = courseService.convertToDto(testCourse);
+                CourseDto result = courseService.convertToDto(courseWithNullBooleans);
 
-            assertThat(result).isNotNull();
-            assertThat(result.getId()).isEqualTo(testCourse.getId());
-            assertThat(result.getTitle()).isEqualTo(testCourse.getTitle());
-            assertThat(result.getCode()).isEqualTo(testCourse.getCode());
-            assertThat(result.getDescription()).isEqualTo(testCourse.getDescription());
-            assertThat(result.getDuration()).isEqualTo(testCourse.getDurationHours());
-            assertThat(result.getIndividual()).isEqualTo(testCourse.getIsIndividual());
-            assertThat(result.getActive()).isEqualTo(testCourse.getIsActive());
-            assertThat(result.getCreatedAt()).isEqualTo(testCourse.getCreatedAt());
-            assertThat(result.getUpdatedAt()).isEqualTo(testCourse.getUpdatedAt());
-            assertThat(result.getCategory()).isEqualTo(testCategoryDto);
-            assertThat(result.getCategoryId()).isEqualTo(testCategory.getId());
-
-            verify(categoryAdminService).convertToDto(testCategory);
+                assertThat(result.getIndividual()).isNull();
+                assertThat(result.getActive()).isNull();
+            }
         }
 
-        @Test
-        @DisplayName("Should handle course with null boolean fields")
-        void shouldHandleCourseWithNullBooleanFields() {
-            Course courseWithNullBooleans = Course.builder()
-                    .id(1)
-                    .title("Test Course")
-                    .code("TEST")
-                    .description("Test")
-                    .durationHours(30)
-                    .isIndividual(null)
-                    .isActive(null)
-                    .category(testCategory)
-                    .createdAt(LocalDateTime.now())
-                    .updatedAt(LocalDateTime.now())
-                    .build();
+        @Nested
+        @DisplayName("Integration Tests")
+        class IntegrationTests {
 
-            when(categoryAdminService.convertToDto(testCategory)).thenReturn(testCategoryDto);
+            @Test
+            @DisplayName("Should work together with all dependencies")
+            void shouldWorkTogetherWithAllDependencies() {
+                testCourse.setCategory(testCategory);
+                testCourse.setCreatedAt(LocalDateTime.now().minusDays(5));
+                testCourse.setUpdatedAt(LocalDateTime.now().minusDays(1));
+                testCourse.setIsActive(true);
+                testCourse.setIsIndividual(false);
 
-            CourseDto result = courseService.convertToDto(courseWithNullBooleans);
+                testCourseInstance.setCourse(testCourse);
+                testCourseInstance.setStartDate(LocalDateTime.now().plusDays(2));
+                testCourseInstance.setEndDate(LocalDateTime.now().plusDays(20));
+                testCourseInstance.setTitle("Test Group");
 
-            assertThat(result.getIndividual()).isNull();
-            assertThat(result.getActive()).isNull();
-        }
-    }
+                when(courseRepository.findAll()).thenReturn(List.of(testCourse));
+                when(courseRepository.findById(1)).thenReturn(Optional.of(testCourse));
+                when(categoryService.getAllCategories()).thenReturn(List.of(testCategoryDto));
+                when(categoryAdminService.convertToDto(testCategory)).thenReturn(testCategoryDto);
+                when(courseInstanceRepository.findAllByIsActiveTrue()).thenReturn(List.of(testCourseInstance));
 
-    @Nested
-    @DisplayName("Integration Tests")
-    class IntegrationTests {
+                List<CourseDto> allCourses = courseService.getAllCourses();
+                CourseDto courseById = courseService.getById(1);
+                List<CourseCategoryDto> categories = courseService.getCategories();
+                Course courseEntity = courseService.getCourseById(1);
+                List<CourseDto> availableCourses = courseService.getAvailableCoursesForOrganization(testUser);
 
-        @Test
-        @DisplayName("Should work together with all dependencies")
-        void shouldWorkTogetherWithAllDependencies() {
-            testCourse.setCategory(testCategory);
-            testCourse.setCreatedAt(LocalDateTime.now().minusDays(5));
-            testCourse.setUpdatedAt(LocalDateTime.now().minusDays(1));
-            testCourse.setIsActive(true);
-            testCourse.setIsIndividual(false);
+                assertThat(allCourses).hasSize(1);
+                assertThat(courseById.getId()).isEqualTo(1);
+                assertThat(categories).hasSize(1);
+                assertThat(courseEntity.getId()).isEqualTo(1);
+                assertThat(availableCourses).hasSize(1);
 
-            testCourseInstance.setCourse(testCourse);
-            testCourseInstance.setStartDate(LocalDateTime.now().plusDays(2));
-            testCourseInstance.setEndDate(LocalDateTime.now().plusDays(20));
-            testCourseInstance.setTitle("Test Group");
+                CourseDto dto = availableCourses.get(0);
+                assertThat(dto.getInstanceTitle()).isNull();
+                assertThat(dto.getInstanceStartDate()).isNull();
+                assertThat(dto.getInstanceEndDate()).isNull();
 
-            when(courseRepository.findAll()).thenReturn(List.of(testCourse));
-            when(courseRepository.findById(1)).thenReturn(Optional.of(testCourse));
-            when(categoryService.getAllCategories()).thenReturn(List.of(testCategoryDto));
-            when(categoryAdminService.convertToDto(testCategory)).thenReturn(testCategoryDto);
-            when(courseInstanceRepository.findAllByIsActiveTrue()).thenReturn(List.of(testCourseInstance));
-
-            List<CourseDto> allCourses = courseService.getAllCourses();
-            CourseDto courseById = courseService.getById(1);
-            List<CourseCategoryDto> categories = courseService.getCategories();
-            Course courseEntity = courseService.getCourseById(1);
-            List<CourseDto> availableCourses = courseService.getAvailableCoursesForOrganization(testUser);
-
-            assertThat(allCourses).hasSize(1);
-            assertThat(courseById.getId()).isEqualTo(1);
-            assertThat(categories).hasSize(1);
-            assertThat(courseEntity.getId()).isEqualTo(1);
-            assertThat(availableCourses).hasSize(1);
-            assertThat(availableCourses.get(0).getInstanceTitle()).isEqualTo("Test Group");
-
-            verify(courseRepository).findAll();
-            verify(courseRepository, times(2)).findById(1);
-            verify(categoryService).getAllCategories();
-            verify(categoryAdminService).convertToDto(testCategory);
-            verify(courseInstanceRepository).findAllByIsActiveTrue();
+                verify(courseRepository).findAll();
+                verify(courseRepository, times(2)).findById(1);
+                verify(categoryService).getAllCategories();
+                verify(categoryAdminService).convertToDto(testCategory);
+                verify(courseInstanceRepository).findAllByIsActiveTrue();
+            }
         }
 
 
@@ -567,3 +594,4 @@ class CourseServiceTest {
         }
     }
 }
+
